force-app/main/default/objects/Payload_Operation__mdt/Payload_Operation__mdt.object-meta.xml
<CustomObject>
    <label>Payload Operation</label>
    <pluralLabel>Payload Operations</pluralLabel>
</CustomObject>