force-app/main/default/objects/Payload_Operation__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>