force-app/main/default/objects/Payload_Operation__mdt/fields/Params__c.field-meta.xml
<CustomField>
    <fullName>Params__c</fullName>
    <description>parameters in url</description>
    <label>Params</label>
    <length>255</length>
    <type>Text</type>
</CustomField>